
Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

31-Jan-2010 Hannes Papenberg
# Fixed group bug in JParameter - Thanks James Kennard
- Removing unused images from administrator, including the /images folder
# Fixing routing of JHTML::image()
# Fixed notice in com_content router
+ Added $path_only option to JHTML::image()

30-Jan-2010 Hannes Papenberg
# Fixed translation of parameter labels in com_users
+ Added ability to add a category.xml file to a component to add parameters to com_categories
+ Added mod_weblinks Weblink Module - Thanks Amy Stephen!
# Finished making images overrideable

29-jan-2010 Jean-Marie Simonet
# Fixed Form field Spacer display

28-jan-2010 Ron Severdia
# Fixed CSS bug (missing CSS for new form element)

27-jan-2010 Christophe Demko
# Correcting bugs in JForm
^ Call to $object->toString() changed to (string)$object

26-Jan-2010 Mark Dexter
^ Add sprintf, alternative readmore to com_content, newsflash views (Angie Radtke)
# Fix bug so you can load a category (Robert Deutz)
# Bug fixes in com_search, newsflash (Angi Radtke)
^ Work on com_contact layouts (Elin Waring)
# Language strings work (Elin Waring)
# Make view and config labels consistent (Elin Waring)
# Fix bug in Save & New for non-article categories
^ Work on com_contact component and model
# Fix menu assignments in sample data (Elin Waring)
# Fix routing for subcategories in com_content (Elin Waring)
# Fix problems saving data in Contact Edit form
^ Allow for hierarchical params in com_contact
# Fix default value of published state in contacts and banners
^ Improvements to sample data (Elin Waring)
# Make toolbars consistent (Elin Waring)

26-Jan-2010 Louis Landry
 # [#19552] [patch] Error loading xml from string in JFactory::getXML (Thanks to Christopher Garvis)
 # [#19542] Wrong field name in libraries/joomla/html/parameter/element/menuitem.php (Thanks to Jeff Channell)